--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -31,6 +31,8 @@ jobs:
           python -m PyInstaller `
             --noconfirm `
             --clean `
+            --icon "icons/win/MXToAAF.ico" `
+            --add-data "LICENSES.txt;." `
             --onefile `
             --windowed `
             --hidden-import=tkinter `
