UI: in-app help/license menus; bundle docs; track icons and mac workflow

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -33,6 +33,7 @@ jobs:
             --clean `
             --icon "icons/win/MXToAAF.ico" `
             --add-data "LICENSES.txt;." `
+            --add-data "docs/README_windows.md;docs" `
             --onefile `
             --windowed `
             --hidden-import=tkinter `
