UI: header help on Windows; bundle ico for window icon

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -34,6 +34,7 @@ jobs:
             --icon "icons/win/MXToAAF.ico" `
             --add-data "LICENSES.txt;." `
             --add-data "docs/README_windows.md;docs" `
+            --add-data "icons/win/MXToAAF.ico;icons/win" `
             --onefile `
             --windowed `
             --hidden-import=tkinter `
