--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -35,6 +35,8 @@ jobs:
             --add-data "LICENSES.txt;." `
             --add-data "docs/README_windows.md;docs" `
             --add-data "icons/win/MXToAAF.ico;icons/win" `
+            --add-data "binaries/windows/ffmpeg.exe;binaries" `
+            --add-data "binaries/windows/ffprobe.exe;binaries" `
             --onefile `
             --windowed `
             --hidden-import=tkinter `
