fix: Bundle ALL Windows FFmpeg files including DLLs
- Change --add-data from individual files to entire binaries/windows directory
- Fixes Windows error 0xC0000135 (missing DLL dependencies)
- Updated build_windows.bat and GitHub Actions workflow
- Updated SETUP_FFMPEG.md with instructions for downloading shared builds with DLLs

The current ffmpeg.exe requires DLL files that weren't being bundled.
Need to re-download FFmpeg with all DLL dependencies included.

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -35,8 +35,7 @@ jobs:
             --add-data "LICENSES.txt;." `
             --add-data "docs/README_windows.md;docs" `
             --add-data "icons/win/MXToAAF.ico;icons/win" `
-            --add-data "binaries/windows/ffmpeg.exe;binaries" `
-            --add-data "binaries/windows/ffprobe.exe;binaries" `
+            --add-data "binaries/windows;binaries" `
             --onefile `
             --windowed `
             --hidden-import=tkinter `
