Add aaf2 hidden import to PyInstaller for Windows build

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -54,6 +54,7 @@ jobs:
             --onefile `
             --windowed `
             --hidden-import=tkinter `
+            --hidden-import=aaf2 `
             --name "MXToAAF" `
             mxto_aaf_gui.py
       
