--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -54,7 +54,7 @@ jobs:
             --onefile `
             --windowed `
             --hidden-import=tkinter `
-            --hidden-import=aaf2 `
+            --collect-all aaf2 `
             --name "MXToAAF" `
             mxto_aaf_gui.py
       
