Replace FFmpeg with minimal audio-only build (3.8MB) and fix Windows DLL bundling

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -50,7 +50,8 @@ jobs:
             --add-data "LICENSES.txt;." `
             --add-data "docs/README_windows.md;docs" `
             --add-data "icons/win/MXToAAF.ico;icons/win" `
-            --add-data "binaries/windows;binaries" `
+            --add-binary "binaries/windows/ffmpeg.exe;binaries" `
+            --add-binary "binaries/windows/*.dll;binaries" `
             --onefile `
             --windowed `
             --hidden-import=tkinter `
