Trigger Windows build with DLL bundling fix

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -6,6 +6,7 @@ on:
       - main
     tags:
       - 'v*'
+  # Workflow file updated to use --add-binary for DLL bundling
 
 jobs:
   build-windows:
