Use explicit aaf2 submodule imports (matching WAVsToAAF approach)

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -56,7 +56,10 @@ jobs:
             --onefile `
             --windowed `
             --hidden-import=tkinter `
-            --additional-hooks-dir=hooks `
+            --hidden-import=aaf2 `
+            --hidden-import=aaf2.auid `
+            --hidden-import=aaf2.rational `
+            --hidden-import=aaf2.misc `
             --name "MXToAAF" `
             mxto_aaf_gui.py
       
