Use Windows PyInstaller spec and ensure aaf2 bundling

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -44,24 +44,7 @@ jobs:
       
       - name: Build executable
         run: |
-          python -m PyInstaller `
-            --noconfirm `
-            --clean `
-            --icon "icons/win/MXToAAF.ico" `
-            --add-data "LICENSES.txt;." `
-            --add-data "docs/README_windows.md;docs" `
-            --add-data "icons/win/MXToAAF.ico;icons/win" `
-            --add-binary "binaries/windows/ffmpeg.exe;binaries" `
-            --add-binary "binaries/windows/*.dll;binaries" `
-            --onefile `
-            --windowed `
-            --hidden-import=tkinter `
-            --hidden-import=aaf2 `
-            --hidden-import=aaf2.auid `
-            --hidden-import=aaf2.rational `
-            --hidden-import=aaf2.misc `
-            --name "MXToAAF" `
-            mxto_aaf_gui.py
+          python -m PyInstaller --clean mxtoaaf_windows.spec
       
       - name: Create distribution folder
         run: |
