Fix Windows workflow: use PowerShell shell for FFmpeg and packaging steps

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -28,12 +28,13 @@ jobs:
           pip install pyinstaller
       
       - name: Download FFmpeg for Windows
+         shell: pwsh
         run: |
-           echo "Downloading minimal FFmpeg (essentials build)..."
-           Invoke-WebRequest -Uri "https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.zip" -OutFile "ffmpeg.zip"
+          echo "Downloading minimal FFmpeg (essentials build)..."
+          Invoke-WebRequest -Uri "https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.zip" -OutFile "ffmpeg.zip"
           echo "Extracting FFmpeg..."
           Expand-Archive "ffmpeg.zip" -DestinationPath "."
-           echo "Copying FFmpeg binaries (no DLLs needed - essentials are self-contained)..."
+          echo "Copying FFmpeg binaries (no DLLs needed - essentials are self-contained)..."
           $ffmpegDir = Get-ChildItem -Directory -Filter "ffmpeg-*" | Select-Object -First 1
           New-Item -ItemType Directory -Force -Path "binaries\windows"
           Copy-Item "$($ffmpegDir.FullName)\bin\ffmpeg.exe" -Destination "binaries\windows\"
@@ -42,12 +43,14 @@ jobs:
           Get-ChildItem "binaries\windows"
       
       - name: Build executable
+         shell: pwsh
         run: |
           python -m PyInstaller --clean mxtoaaf_windows.spec
       
       - name: Create distribution folder
+         shell: pwsh
         run: |
-          mkdir dist_package\MXToAAF
+           New-Item -ItemType Directory -Force -Path "dist_package\MXToAAF" | Out-Null
           Copy-Item "dist\MXToAAF.exe" -Destination "dist_package\MXToAAF\"
           Copy-Item "LICENSES.txt" -Destination "dist_package\MXToAAF\"
           Copy-Item "docs\README_windows.md" -Destination "dist_package\MXToAAF\README.md"
