--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -6,7 +6,6 @@ on:
       - main
     tags:
       - 'v*'
-  # Workflow file updated to use --add-binary for DLL bundling
 
 jobs:
   build-windows:
@@ -22,25 +21,26 @@ jobs:
           python-version: '3.11'
       
       - name: Install dependencies
+        shell: pwsh
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller
       
       - name: Download FFmpeg for Windows
-         shell: pwsh
+        shell: pwsh
         run: |
-          echo "Downloading minimal FFmpeg (essentials build)..."
-          Invoke-WebRequest -Uri "https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.zip" -OutFile "ffmpeg.zip"
-          echo "Extracting FFmpeg..."
-          Expand-Archive "ffmpeg.zip" -DestinationPath "."
-          echo "Copying FFmpeg binaries (no DLLs needed - essentials are self-contained)..."
-          $ffmpegDir = Get-ChildItem -Directory -Filter "ffmpeg-*" | Select-Object -First 1
-          New-Item -ItemType Directory -Force -Path "binaries\windows"
-          Copy-Item "$($ffmpegDir.FullName)\bin\ffmpeg.exe" -Destination "binaries\windows\"
-          Copy-Item "$($ffmpegDir.FullName)\bin\ffprobe.exe" -Destination "binaries\windows\"
-          echo "FFmpeg binaries ready:"
-          Get-ChildItem "binaries\windows"
+          Write-Host 'Downloading minimal FFmpeg (essentials build)...'
+          Invoke-WebRequest -Uri 'https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.zip' -OutFile 'ffmpeg.zip'
+          Write-Host 'Extracting FFmpeg...'
+          Expand-Archive 'ffmpeg.zip' -DestinationPath '.'
+          Write-Host 'Copying FFmpeg binaries (no DLLs needed - essentials are self-contained)...'
+          $ffmpegDir = Get-ChildItem -Directory -Filter 'ffmpeg-*' | Select-Object -First 1
+          New-Item -ItemType Directory -Force -Path 'binaries\windows' | Out-Null
+          Copy-Item "$($ffmpegDir.FullName)\bin\ffmpeg.exe" -Destination 'binaries\windows\'
+          Copy-Item "$($ffmpegDir.FullName)\bin\ffprobe.exe" -Destination 'binaries\windows\'
+          Write-Host 'FFmpeg binaries ready:'
+          Get-ChildItem 'binaries\windows'
       
       - name: Build executable
          shell: pwsh
